src/objects/Contract_Royalty_Rule_Other_Discount__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Royalty Rule Other Discounts</relationshipLabel>
        <relationshipName>Contract_Royalty_Rule_Other_Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount_1_Trigger__c</fullName>
        <inlineHelpText>i.e. On Device Ship</inlineHelpText>
        <label>Discount 1 Trigger</label>
        <picklist>
            <picklistValues>
                <fullName>Number of devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Criteria_Type__c</fullName>
        <label>Discount Criteria Type</label>
        <picklist>
            <picklistValues>
                <fullName>%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>#</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Level__c</fullName>
        <label>Discount Level</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specify_Application_if_applicable__c</fullName>
        <label>Specify Application if applicable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Details__c</fullName>
        <description>If Discount Trigger is Other use this field to explain.</description>
        <inlineHelpText>If Discount Trigger is Other use this field to explain.</inlineHelpText>
        <label>Trigger Details</label>
        <type>TextArea</type>
    </fields>
    <label>Contract Royalty Rule Other Discount</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Royalty Rule Other Discount Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Royalty Rule Other Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>